test/classes/diten/newArray.good
test/classes/diten/newArray.chpl:4: error: invalid use of 'new'
